# Lift-os-LLM

./: .env.example  .gitignore  Dockerfile  INTEGRATION_SUMMARY.md  LLM_Finance_Leaderboard_Architecture.md  QUICKSTART.md  README.md  README_AUTO_FINETUNING.md  STREAMLIT_CLOUD_DEPLOYMENT.md  SYSTEMS_TEST_REPORT.md  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements-streamlit.txt  requirements.txt  run_microservice.py  setup.py  test_microservice.py
configs/: benchmark_config.yaml
data/training/: combined_multi_industry_corpus.jsonl  synthetic_education_v1.jsonl  synthetic_finance_gsib_v3.jsonl  synthetic_finance_v2.jsonl  synthetic_healthcare_v1.jsonl  synthetic_retail_v1.jsonl
docs/: API_INTEGRATION_EXAMPLES.md  AUTO_FINETUNING_ARCHITECTURE.md  CODEBASE_REVIEW_FINDINGS.md  DEVELOPER_API_GUIDE.md  EXAMPLES.md  GSIB_CORPUS_DOCUMENTATION.md  HUGGINGFACE_MULTI_MODEL_GUIDE.md  MODEL_COMPARISON_QUICKSTART.md  MULTI_INDUSTRY_TRAINING_GUIDE.md  QUICK_REFERENCE.md  README.md  TECHNICAL_SETUP_GUIDE.md
scripts/: run_benchmark.py  setup_environment.py  test_auto_finetuning.py  test_multi_industry_training.py  test_system.py  test_training_components.py  test_training_imports.py  validate_gsib_corpus.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  retriever_agent.py
src/api/: __init__.py
src/api/routes/: __init__.py  analysis.py  batch.py  models.py  training.py
src/config/: __init__.py  models_config.yaml  settings.py  training_config.yaml
src/core/: config.py  database.py  logging.py  security.py
src/data/: __init__.py
src/data/collectors/: __init__.py  sec_filings.py
src/data/processors/: __init__.py  document_parser.py  embeddings.py  vector_store.py
src/data/schemas/: __init__.py  data_models.py
src/evaluation/: __init__.py
src/evaluation/metrics/: __init__.py  quality_metrics.py
src/evaluation/runners/: __init__.py  benchmark_runner.py
src/models/: requests.py  responses.py
src/services/: content_analysis.py  training_service.py
src/tasks/: __init__.py  base_task.py
src/tasks/low_complexity/: __init__.py  eps_extraction.py
src/training/: __init__.py  comparison_engine.py  local_orchestrator.py  lora_trainer.py  resource_manager.py
src/utils/: __init__.py  database.py  helpers.py  logging_config.py
streamlit_app/: __init__.py  main.py  main_full.py
streamlit_app/components/: __init__.py  comparison_results.py  model_selector.py
streamlit_app/pages/: training_dashboard.py
